# Venom

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .env.preprod.example  .gitignore  AGENTS.md  Makefile  README.md  README_PL.md  constraints-hf-onnx.txt  pyproject.toml  pytest.ini  requirements-ci-lite.txt  requirements-docker-minimal.txt  requirements-extras-onnx.txt  requirements-full.txt  requirements-profile-api.txt  requirements-profile-ollama.txt  requirements-profile-onnx-cpu.txt  requirements-profile-onnx.txt  requirements-profile-vllm.txt  requirements-profile-web.txt  requirements.txt  sonar-project.properties
.github/: BRANCH_PROTECTION.md  coding-agent-starter-prompt.md  coding-agent-task-template.md  copilot-instructions.md  pull_request_template.md
config/: coverage-file-floor.txt  dead_code_allowlist.txt  dead_code_vulture_allowlist.txt
docker/: backend.Dockerfile
docs/: AGENTS.md  AUTONOMY_GATE.md  BACKEND_ARCHITECTURE.md  CONFIG_PANEL.md  DASHBOARD_GUIDE.md  DEPLOYMENT_NEXT.md  ENVIRONMENTS_SUPPORT.md  FRONTEND_NEXT_GUIDE.md  GUARDIAN_GUIDE.md  KNOWLEDGE_HYGIENE.md  LLM_RUNTIME_3STACK_BENCHMARK_BASELINE.md  MODEL_MANAGEMENT.md  MODEL_TUNING_GUIDE.md  MODULES_OPTIONAL_REGISTRY.md  OLLAMA_FEEDBACK_LOOP_RUNBOOK.md  RUNTIME_PROFILES.md  SONAR_ARCHITECTURE_GUIDE.md  TESTING_POLICY.md  THEMING_GUIDE.md  THE_ACADEMY.md  THE_CODER.md  THE_COUNCIL.md  THE_LIBRARIAN.md
examples/: hive_demo.py
make/: maintenance.mk  preprod.mk  runtime.mk  tests.mk
openapi/: openapi.json
scripts/: agent_hard_gate.sh  apply_branch_protection_hard_gate.sh  check_architecture_contracts.py  check_file_coverage_floor.py  check_optional_modules_contracts.py  check_test_catalog.py  (+13 more)
(+689 files in other folders)
